# sbmanager

./: .gitignore  AUTHORS  Changeloggtk3  Compflags  Makefile.am  README  README-INSTALL  TODO  configure.ac  git-sbmanager  sbmanager-error
data/: Makefile.am  data.h.in  github.com.gitsop01.sbmanager.desktop  github.com.gitsop01.sbmanager.desktop.in  github.com.gitsop01.sbmanager.desktop.in.in  github.com.gitsop01.sbmanager.service  github.com.gitsop01.service  sbmanager.desktop  sbmanager.desktop.in.in
nautilus/: Makefile.am  nautilus-sbmanager.c  nautilus-sbmanager.h  nautilus-sbmgr.c
po/: .intltool-merge-cache  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  ja.gmo  ja.po
src/: Makefile.am  device.c  device.h  gui.c  gui.h  iconstate.c  iconstate.h  main.c  sb.app.c  sb.app.h  sbitem.c  sbitem.h  sbmanager-menu.ui  sbmanager.c  sbmgr.c  sbmgr.h  utility.c  utility.h
